Fixed smooth scrolling on safari, fixed max height hero section bug on safari.

--- a/src/index.css
+++ b/src/index.css
@@ -76,5 +76,13 @@ iframe > html {
 } */
 
 .hero {
-  max-height: calc(100vh - 64px);
+  /* max-height: calc(100vh - 64px); */
+  max-height: 100vh;
+  box-sizing: border-box;
+  padding-top: 64px;
+  margin-top: -64px;
+}
+
+html {
+  scroll-behavior: smooth;
 }
